--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "uuid": "^10.0.0"
   }
